--- a/project/icon-font/template/icon-template-glyphs.scss
+++ b/project/icon-font/template/icon-template-glyphs.scss
@@ -32,12 +32,11 @@
 /* 
 Icons
 
-Fonts are made from SVG's who are located in folders whose name start with `icon-font` and it's `svg` subfolder. For example, icon-font will be made from these folders:
+Fonts are made from SVG's who are located in folders whose name start with `icon-font` and it's `svg` subfolder. For example, icon-font will be made from SVG's in this folder:
 
-- `project/modules__core/icon-font/svg/`
-- `project/modules__addon/icon-font--custom/svg/`
+- `project/icon-font/svg/`
 
-SVG graphics should be made on canvas which has height of `512px` and where gridline is set every 32px, with 4 subdivisions. There is an example Adobe Illustrator file in `./project/modules-core/icon-font/test-pattern-1.ai` and `./project/modules-core/icon-font/test-pattern-2.ai`
+SVG graphics should be made on canvas which has height of `512px` and where gridline is set every 32px, with 4 subdivisions. There is an example Adobe Illustrator file in `./project/icon-font/test-pattern-1.ai` and `./project/icon-font/test-pattern-2.ai`
 
 When you create icons, in order for them to be pixel perfect in size of `16px`, you must align curves to main gridlines. If you plan to make icons for some other pixel-perfect size, you must recalculate grid and canvas size.
 
@@ -46,8 +45,6 @@ All graphics in SVG must follow these rules:
 - only vectors are included, all raster graphics are discarded
 - only flat surfaces are included. All strokes must be converted to fills, use `Object -> Expand` command in Illustrator.
 - only one color is accepted. If you plan to make hollow objects, use `Pathfinder -> Exclude` command in Illustrator.
-
-For more info on how to build pixel perfect icons for any base font size, read [Nexus icons tutorial](http://vx.rs/nexus-icons)
 
 
 ### All generated icons
